working good on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@
 
 body {
     max-width: 100vw;
+    background-color: var(--background-color);
 }
 
 .main-container {
@@ -138,10 +139,10 @@ ul {
     padding-top: 1rem;
     position: fixed;
     bottom: 0;
-    width: 100%; 
     background-color: var(--background-color);
     padding-top: 15px;
     z-index: 1000;
+    width: 100vw;
 }
 
 i {
