fix footer and add dynamic title efect

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,6 +154,12 @@ i {
     min-height: 90vh;
 }
 
+#dynamic-title {
+    min-height:  54.39px;
+    display: block;
+}
+  
+
 .welcome-message {
     font-size: 24px;
 }
