--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -215,6 +215,10 @@ h3 {
     font-size: 1.5rem;
 }
 
+#skills> .page-content > div > h3 {
+    padding-top: 20px;
+}
+
 #projects-container {
     margin-top: 30px;
     padding: 10px;
